--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~13.3.0",
     "angular-svg-round-progressbar": "^8.0.0",
     "rxjs": "~7.5.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
